# shipper

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  ios-code-signing.md  ios-pipeline.md  progress.md  release.md  setup.md
src/: config.rs  error.rs  main.rs
src/commands/: deploy.rs  init.rs  mod.rs  validate.rs
src/stores/: appstore.rs  http.rs  mod.rs  playstore.rs
src/utils/: credentials.rs  lock.rs  logger.rs  mod.rs  notifier.rs  progress.rs  secret.rs  version.rs
tests/: cli.rs
