[package]
name = "shipper"
version = "0.1.0"
edition = "2021"
description = "Zero-dependency local deployment CLI for mobile apps"

[[bin]]
name = "shipper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
which = "6"
indicatif = "0.17"
console = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tempfile = "3"
regex = "1"
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "1"
