[package]
name = "shipper"
version = "0.1.0"
edition = "2021"
description = "Zero-dependency local deployment CLI for mobile apps"

[[bin]]
name = "shipper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
which = "6"
indicatif = "0.17"
console = "0.15"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
